# sage

./: .gitignore  README.md  app.py  pyproject.toml  server.py  template.env
azure_cognitve_service/: main.py
backend-viz/: delete_all_gists.py  main.py  utils.py
data/summaries/abs/: 10_1007_978_3_319_75474_1_4.txt  10_1016_s2213_2600_20_30216_2.txt  10_1038_nature09583.txt  10_1038_nature12354.txt  10_1038_s41467_019_12406_z.txt  10_1038_s41564_020_00813_8.txt  10_1038_s41586_019_1191_6.txt  10_1038_s41586_021_03491_6.txt  10_1038_s41591_020_1054_6.txt  10_1038_s41598_018_21825_9.txt  10_1073_pnas_0505577102.txt  10_1073_pnas_1407087111.txt  10_1073_pnas_87_7_2466.txt  10_1111_j_1476_5381_1996_tb15463_x.txt  10_1126_scisignal_2004184.txt  10_1128_aac_00819_20.txt  10_1128_jvi_01542_10.txt  10_1128_jvi_02062_10.txt  10_1128_jvi_02232_10.txt  10_1186_s12885_018_4197_9.txt  10_1186_s12934_020_01355_8.txt  10_1186_s13568_014_0044_9.txt  10_1242_jcs_114_20_3631.txt  10_1371_journal_ppat_1004502.txt  10_18632_oncotarget_3277.txt  10_3389_fphar_2019_00051.txt  10_3390_ijms232012644.txt  10_3390_polym4010617.txt
sage/: __init__.py  azure.py  chat.py  document.py  openalex.py  summarize.py  unpaywall.py  utils.py  viz.py
summarizer/: env.py  main.py  test_summarizer_agent.py
tests/: __init__.py  test_document.py  test_openalex.py  test_summarize.py  test_unpaywall.py
