[tool.poetry]
name = "sage"
version = "0.1.0"
description = "Research Faster"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
