[tool.poetry]
name = "sage"
version = "0.1.0"
description = "Research Faster"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiocache = "^0.12.1"
httpx = "^0.24.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
streamlit = "^1.22.0"
langchain = "^0.0.181"
pymupdf = "^1.22.3"
aiolimiter = "^1.1.0"
tenacity = "^8.2.2"
azure-ai-textanalytics = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
